@@ -4,23 +4,32 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.BinaryOperator;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 public class First_Collect {
 	public static void main(String[]args) {
-		List<Integer> list = Arrays.asList(12,23,24,35,4,6,68,37,46,3);
-		List<Integer> sum = list.stream().collect(new Storing());
-		System.out.println(sum);
+		
+		Map<Integer, List<String>> m1 = List.of("amae","ankit").stream()
+				.collect(Collectors.groupingBy(String::length));
+		System.out.println(m1);
+		
+		
+		
+		Map<Object, Object> m2 = List.of("Amar","Gagan","Rushi","Rohity").stream()
+				.collect(Collectors.toMap(i->i, i->i.length()));
+		System.out.println(m2);
 	}
 
 }
                                    
-//                              T (input type) A(Acculamator) R(return /output)
+//                           T (input type) A(Acculamator) R(return /output)
 class Storing implements Collector<Integer, List<Integer>, List<Integer>> {
 
 	public Supplier<List<Integer>> supplier() {
